r2/r2/public/static/css/reddit.less
/* ... */
.sr-interest-bar .bubble p {
    margin: 6px 3px;
    margin-top: 0;
}

.sr-interest-bar .subscribe {
    background-image: url(../bg-button-add.png); /* SPRITE stretch-x */
    border: 1px solid #444;
    border-radius: 3px;
    padding: 0 6px;
    color: white;
    font-weight: bold;
}

.sr-interest-bar .query-box {
    position: relative;
    padding: 2px 4px;
    border: 2px solid #979797;
    border-radius: 5px;
}

.sr-interest-bar.focus .query-box {
    border-color: #5f99cf;
}

.sr-interest-bar.error .query-box {
    border-color: #cf5e5e;
}

.sr-interest-bar .error-caption, .sr-interest-bar.error .caption {
    display: none;
}

.sr-interest-bar.error .error-caption {
    display: block;
}

.sr-interest-bar .query {
    width: 100%;
    font-size: 20px;
    margin: 0;
    padding: 0;
    border: none;
    outline: none;
}

.sr-interest-bar .throbber {
    position: absolute;
    right: 3px;
    top: 5px;
}

.sr-interest-bar ul.results {
    margin: 0;
    margin-top: 6px;
    padding-top: 2px;
    border-top: 1px dotted #bbb;
    display: none;
}

.sr-interest-bar li {
    display: inline-block;
    margin: 6px 3px;
}

.sr-interest-bar a {
    padding: 1px 2px;
}

.sr-interest-bar a:hover {
    text-decoration: underline;
}

.sr-interest-bar .results .random {
    color: gray;
    font-weight: bold;
}

.ajax-upload-form iframe { display: none; }

.developed-app, .authorized-app {
    border: solid 1px black;
    margin-left: 20px;
    margin-bottom: 0.5em;
    padding: 7px;
    position: relative;
    width: 880px;
    font-size: x-small;
}

.developed-app.collapsed, .authorized-app { height: 100px; }
.developed-app .collapsed { display: none; }

.developed-app .ajax-upload-form {
    display: none;
}

.app-details {
    display: inline-block;
    width: 200px;
    height: 72px;
    margin-left: 1em;
    vertical-align: top;
}

.app-details h2 { font-size: medium; margin: 0px; }
.app-details h3 { font-size: x-small; margin: 0px; }

.app-icon {
    display: inline-block;
    width: 72px;
    height: 72px;
    line-height: 72px;
    text-align: center;
    white-space: nowrap;
}

.app-icon img {
    vertical-align: middle;
}

.app-permissions li { position: relative; }
.app-permissions-details { margin-top: 1em; }

.app-scope {
    display: none;
    position: absolute;
    top: 1ex;
    left: 3ex;
    border: 1px solid black;
    background: #fffdcc;
    z-index: 1;
}

.app-description {
    display: inline-block;
    font-size: small;
    width: 597px;
    height: 80px;
    overflow-y: auto;
    vertical-align: top;
}

.app-developers {
    position: absolute;
    left: 289px;
    bottom: 1ex;
    width: 600px;
}

.edit-app-button, .revoke-app-button {
    position: absolute;
    bottom: 1ex;
    left: 12px;
    width: 200px;
}

.edit-app.collapsed, .edit-app-icon, .developed-app .collapsed {
    display: none;
}

.edit-app-icon-button { display: block; text-align: center; width: 72px; }
.edit-app-form, .edit-app-form form { display: inline-block; }
.edit-app-form th, .edit-app-icon th { width: 12ex; }
.edit-app-form input, .edit-app-form textarea { margin: 0px; width: 50ex; }
.edit-app-form input[name="name"] { width: 20ex !important; }
.edit-app-form input[type="file"] { width: auto !important; }
.edit-app-form input[type="submit"] {
    margin-left: 10px;
    width: auto !important;
}

.delete-app-button {
    position: absolute;
    bottom: 7px;
    left: 100px;
}

#create-app { display: none; }

table.diff {font-size: small;}
.diff_header {background-color:lightgrey}
.diff_next {background-color:lightgrey}
.diff_add {background-color:lightgreen}
.diff_chg {background-color:yellow}
.diff_sub {background-color:lightcoral}

.gilded-comment-icon {
    position: relative;
    display: inline-block;
    margin: 0 0 -14px 8px;
    top: -8px;
    color: #99895F;
    font-size: .9em;
    vertical-align: middle;
}

.gilded-comment-icon:before {
    display: inline-block;
    content: '';
    background-image: url(../gold-coin.png);  /* SPRITE */
    background-repeat: no-repeat;
    height: 14px;
    width: 13px;
    margin-right: 2px;
    vertical-align: -3px;
}

.user-gilded > .entry .gilded-comment-icon:before {
    width: 23px;
}

body.post-under-6h-old .gilded-comment-icon {
    opacity: .55;
}

.buttons li.comment-save-button { display: none; }
.buttons li.comment-unsave-button { display: inline; }

body.gold .buttons li.comment-save-button { display: inline; }

.goldvertisement {
    height: 50px;
    border: 1px solid #c4b487;
    text-align: center;
    line-height: 1.3em;
    box-shadow: 0 0 10px #dad0b3 inset;
    color: #333;
}

.goldvertisement .inner {
    margin: 1px;
    border: 1px solid #dbd1b5;
    height: 46px;
    line-height: 44px;
}

.goldvertisement p {
    display: inline-block;
    vertical-align: middle;
    margin: 0 4px;
    line-height: 14px;
}

.goldvertisement strong {
    font-size: 15px;
}

.goldvertisement a {
    color: #9a7d2e;
    font-weight: bold;
    text-decoration: underline;
}

.goldvertisement i {
    font-size: 11px;
    font-variant: italic;
}

#stripe-payment th {
    padding:5px; 
    vertical-align:top;
    text-align:right;
    white-space:nowrap;
    font-size:smaller;
}

#stripe-payment th label { display:inline; }
#stripe-payment td input {
    font-size:small;
    width:200px;
}

#stripe-payment input.card-cvc { width:5ex; }
#stripe-payment input.card-address_zip { width:6ex; }

.stripe-note a.icon {
    position: relative;
    float: left;
    text-indent: -9999px;
    margin-right: 10px;
    width: 119px;
    height: 33px;
    background-image: url(../stripe.png);
}

.stripe-note div {
    float: left;
    width: 250px;
    font-size: small;
}

.permissions {
    display: inline-block;
    font-size: small;
    text-align: right;
    width: 36ex;
}
#moderator_invite .permissions { width: 30ex; }
.permissions > form { display: none; }
/* ... */

